--- a/Krydsord.Helpers/Krydsord.Helpers.csproj
+++ b/Krydsord.Helpers/Krydsord.Helpers.csproj
@@ -39,9 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryFormatterDeepClone.cs" />
+    <Compile Include="MemberWiseDeepClone.cs" />
     <Compile Include="RandomHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SortedComparablelistHelper.cs" />
     <Compile Include="SortedStringListHelper.cs" />
     <Compile Include="StringHelper.cs" />
   </ItemGroup>
